fixed spacing around New to Amazon area

--- a/style.css
+++ b/style.css
@@ -69,14 +69,17 @@ p {
     margin: auto;
 }
 
-.small {
-    width: 30%;
-}
-
 h4 {
     color: rgb(163, 157, 157);
-    width: 40%;
-    margin: auto;
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #000;
+    line-height: 0.1em;
+    margin: 10px 0 10px;
+}
+
+h4 span {
+    background: #fff;
 }
 
 .bottom {
